--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -2,5 +2,5 @@ FROM almalinux:8
 RUN yum install nginx -y
 ENV TRAINING="DEVOPS" \
     TRAINER="Siva" \
-    DURATION="100HRS" \
+    DURATION="100HRS"
 CMD ["nginx","-g","daemon-off;"]
