--- a/ENV/Dockerfile
+++ b/ENV/Dockerfile
@@ -3,4 +3,4 @@ RUN yum install nginx -y
 ENV TRAINING="DEVOPS" \
     TRAINER="Siva" \
     DURATION="100HRS"
-CMD ["nginx","-g","daemon-off;"]
+CMD ["nginx","-g","daemon off;"]
