--- a/ADD/dockerfile
+++ b/ADD/dockerfile
@@ -4,3 +4,4 @@ RUN rm -rf /usr/share/nginx/html/index.html
 COPY index.html /usr/share/nginx/html/
 ADD https://raw.githubusercontent.com/daws-76s/notes/master/session-01.txt /tmp/
 CMD ["nginx","-g","daemon off;"]
+ADD sample-1.tar /tmp/
