--- a/WORKDIR/Dockerfile
+++ b/WORKDIR/Dockerfile
@@ -1,4 +1,4 @@
 FROM almalinux:8
 RUN cd /tmp
-RUN echo "Welcome To Docker Files" welcome.txt
+RUN echo "Welcome To Docker Files" > welcome.txt
 CMD ["sleep","100"]
